# Tsunami-Agent

./: .env.example  .gitignore  .syncignore  README.md  README_AGENT.md  README_final.md  cli.py  fish_plugins.sh  pyproject.toml  solution.py  sync_server.sh  test.sh  test_agent.py  test_full_integration.sh  test_solution.py  test_templater.sh
example_plugins/sql_injection_template/: build.gradle  settings.gradle
src/tsunami_agent/: __init__.py  llm_api.py  main.py  models.py  templater.py  tools.py  util.py
tests/: test_complete_workflow.py  test_full_workflow.py  test_injection.py  test_llm_agent.py
tsunami-agent-plugins/BasketAccessManipulationDetector_vulnerability/: build.gradle  settings.gradle
tsunami-agent-plugins/BrokenAccessControlDetectorPlugin_vulnerability/: build.gradle  settings.gradle
tsunami-agent-plugins/BrokenAccessControlDetector_vulnerability/: build.gradle  settings.gradle
vulnerabilities/: basket_access_and_manipulation_vulnerabilities.md  broken_access_control_vulnerabilities.md  broken_authentication_vulnerabilities.md  directory_traversal_vulnerabilities.md  file_upload_vulnerabilities.md  improper_input_validation_vulnerabilities.md  insecure_deserialization_vulnerabilities.md  kill_chatbot_vulnerabilities.md  sensitive_data_exposure_vulnerabilities.md  server_side_request_forgery_vulnerabilities.md  sql_injection_vulnerabilities.md  unvalidated_redirects_vulnerabilities.md  vulnerable_components_vulnerabilities.md  weak_password_vulnerabilities.md  xml_external_entity_xxe_injection_vulnerabilities.md  xss_vulnerabilities.md
(+105 files in other folders)
