[project]
name = "tsunami-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Joscha Bisping",email = "joscha.l.bisping@tu-berlin.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm (>=1.74.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tsunami_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
